--- a/Front-end/partials/login.html
+++ b/Front-end/partials/login.html
@@ -4,8 +4,106 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Login</title>
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+	<link rel="stylesheet" href="../style/login.css">
+	<link rel="stylesheet" href="../style/header.css">
+	<link rel="stylesheet" href="../style/footer.css">
 </head>
 <body>
+
+	<header class="papai">
+        <div class="logo">
+            <a href="index.html">
+             <img src="../img/header/GM -logo-white.png" class= "logoMain" alt="">
+            </a>    
+        </div>
+
+        <ul class="nav">
+            <li class="nav-item">
+                <a class= "nav-link" href="sobre.html"> Sobre nós</a>
+
+            </li>
+            <li class="nav-item">
+                <a class= "nav-link" href="agendamento.html"> Agendamento</a>
+
+            </li>
+            <li class="nav-item">
+                <a class= "nav-link" href="barbeiros.html"> Barbeiros</a>
+                
+            </li>        
+            <li class="nav-item">
+                <a class= "nav-link" href="localidade.html"> Localidade</a>
+                 
+            </li>
+            <li class="nav-item">
+                <a class= "nav-link" href="atendimento.html"> Atendimento</a>
+                
+            </li>
+            
+            <li class="nav-item">
+                <a class= "nav-link" href="login.html"> Login</a>
+                
+            </li>
+        </ul>
+
+
+	   </header>
+	   
+
+
+	   <!-- CONTEUDO LOGIN -->
+
+
+
+
+
+	   
+	   <footer class="footer">
+        <div class="container">
+            <div class="row">
+                <div class="col-rede-sociais">
+                         <h3 class="titulo-rede-sociais"> Rede Sociais</h3>
+                            <a  target = "_blank"  href="#">
+                                <img src="../img/footer/instagram.jpg" alt="link-instagram" class="logo-instagram">
+                            </a>
+
+                            <a  target = "_blank"  href="#">
+                                <img src="../img/footer/facebok.jpg" alt="link-facebook" class="logo-facebook">
+                            </a>
+                        
+                </div>
+
+                <div class="cnpj">
+                    <h2 class="text-cnpj"> cnpj : 00.000.000/0000-01</h2>
+                 </div>
+                <div class="ultima-linha">
+                    <h4 class="email-phone"> gmbarbershop@mail.com     | (11) 97777-0000</h4>   
+               
+                    <h4 class="termo"> termo de uso | politica e privacidade </h4>
+                </div>
+              
+                <div class="bandeiras">
+                    <img src="../img/footer/visa-logo-5.png" alt="visa" class="bandeira-visa">
+                    <img src="../img/footer/Logo_PagSeguro.png" alt="pagseguro" class="bandeira-pagseguro">
+                    <img src="../img/footer/elo-logo-1-1.png" alt="elo" class="bandeira-elo">
+                </div>
+                <img src="../img/header/GM -logo-white.png" alt="logo-footer" class="logo-footer">
+            </div>
+        </div>
+        <!-- <div class = "container2">
+            <img src="../img/footer/logo_siteblindado12.jpg" alt="site-blindado" class="site-blindado">
+            <img src="../img/footer/ssl.png" alt="ssl" class="ssl">
+            <h2 class="copy-right"> COPYRIGHT@EMAIL.COM  2020</h2>
+         </div> -->
+	</footer>
+	
+
+
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
+
+	   
 	
 </body>
 </html>
