--- a/Front-end/partials/atendimento.html
+++ b/Front-end/partials/atendimento.html
@@ -11,6 +11,40 @@
     <title>Atendimento</title>
 </head>
 <body>
+    <!--HEADER-->
+    <header class="papai">
+        <div class="logo">
+            <a href="index.html"><img src="../img/header/GM -logo-white.png" class="logoMain" alt="Logo"> </a>          
+        </div>
+
+        <ul class="nav">
+            <li class="nav-item">
+                <a class= "nav-link" href="sobre.html"> Sobre nós</a>
+
+            </li>
+            <li class="nav-item">
+                <a class= "nav-link" href="agendamento.html"> Agendamento</a>
+
+            </li>
+            <li class="nav-item">
+                <a class= "nav-link" href="barbeiros.html"> Barbeiros</a>
+                
+            </li>        
+            <li class="nav-item">
+                <a class= "nav-link" href="localidade.html"> Localidade</a>
+                 
+            </li>
+            <li class="nav-item">
+                <a class= "nav-link" href="atendimento.html"> Atendimento</a>
+                
+            </li>
+            
+            <li class="nav-item">
+                <a class= "nav-link" href="login.html"> Login</a>
+                
+            </li>
+        </ul>
+       </header>
     <!--Main-->
      <main>
          <h1 class="titulo"> Atendimento</h1>
