--- a/Front-end/partials/login.html
+++ b/Front-end/partials/login.html
@@ -45,5 +45,31 @@
             </li>
         </ul>
        </header>
+
+
+       <div class="login"> 
+           <h3>ENTRAR</h3>
+           <hr>
+           <br>
+       <form>
+        <div class="form-group">
+          <label for="exampleInputEmail1">Endereço de e-mail</label>
+          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="seuemail@exemplo.com">
+          <small id="emailHelp" class="form-text text-muted"> Nunca compartilharemos seu e-mail com mais ninguém. </small>
+        </div>
+        <div class="form-group">
+          <label for="exampleInputPassword1">Senha</label>
+          <input type="password" class="form-control" id="exampleInputPassword1">
+        </div>
+        <div class="form-group form-check">
+          <input type="checkbox" class="form-check-input" id="exampleCheck1">
+          <label class="form-check-label" for="exampleCheck1">Salvar senha</label>
+        </div>
+        <button type="submit" class="btn btn-primary">Enviar</button>
+      </form>
+      <hr>
+      <p class="cadastre-se"> Não tem conta? <a href="/"> Cadastre-se </a></p>
+      </div>
+
 </body>
 </html>
